# PhoneMic

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  README.zh-CN.md  RELEASE_NOTES.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/phone-mic-voice-input/: .config.kiro  design.md  requirements.md  tasks.md
.omc/handoffs/: team-exec-backend-handoff.md  team-exec-injector-handoff.md
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  tray.rs
apps/mobile/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
apps/mobile/e2e/: disconnect_reconnect.spec.ts  pair_inject.spec.ts
apps/mobile/src/: App.vue  env.d.ts  main.ts
apps/mobile/src/asr/: browser_asr.ts  server_asr.ts
apps/mobile/src/components/: ErrorToast.vue
apps/mobile/src/connection/: backoff.spec.ts  backoff.ts  heartbeat.spec.ts  heartbeat.ts  offline_queue.spec.ts  offline_queue.ts  service.ts  status.spec.ts  status.ts  visibility.spec.ts  visibility.ts
apps/mobile/src/desktop/: tauri.ts
apps/mobile/src/i18n/: i18n.spec.ts  index.ts
apps/mobile/src/i18n/dicts/: en-US.json  zh-CN.json
apps/mobile/src/protocol/: .protocol-stamp.json  README.md  config.ts  error.ts  error_obj.ts  http.ts  index.ts  ws.ts
apps/mobile/src/recorder/: microphone.ts  reducer.spec.ts  reducer.ts
apps/mobile/src/router/: index.ts
apps/mobile/src/stores/: index.ts
apps/mobile/src/styles/: main.css
apps/mobile/src/transcript/: auto_send.spec.ts  auto_send.ts  history.spec.ts  history.ts
apps/mobile/src/views/: DesktopSplashView.vue  DesktopView.vue  HomeView.vue  PairView.vue  SettingsView.vue
cmd/phonemic/: .gitignore  README.md  build.sh  cert.go  clipimg.go  filedialog_other.go  filedialog_windows.go  font.go  font_test.go  go.mod  go.sum  history.go  main.go  qr.go  qr_test.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso  state_test.go  transfer.go  transfer_test.go  ui.go  upload.go
cmd/phonemic/assets/: render.js
cmd/phonemic/assets/winres/: winres.json
cmd/phonemic/web/: index.html
crates/phonemic-app/: Cargo.toml
crates/phonemic-app/src/: lib.rs
crates/phonemic-asr/: Cargo.toml
crates/phonemic-asr/src/: engine.rs  lib.rs  watchdog.rs  whisper.rs
crates/phonemic-asr/tests/: asr_bridge_integration.rs
crates/phonemic-core/: Cargo.toml
crates/phonemic-core/src/: bridge_events.rs  diagnostics.rs  error.rs  i18n.rs  lan_filter.rs  lan_view.rs  lib.rs  pair_rate_limit.rs  pairing_code.rs  pairing_service.rs  port_select.rs  rolling_log.rs  session.rs  tracing_setup.rs  url_render.rs  ws_outbound.rs
crates/phonemic-core/src/i18n_dict/: en-US.json  zh-CN.json
crates/phonemic-core/src/web/: dispatcher.rs  errors.rs  middleware.rs  mod.rs  redirect.rs  server.rs  state.rs  tls.rs
crates/phonemic-core/src/web/handlers/: health.rs  mod.rs  pair.rs  statics.rs  ws.rs
crates/phonemic-core/tests/: property_01_port_select.rs  property_02_lan_filter.rs  property_03_url_render.rs  property_05_lan_view.rs  property_16_pairing_code.rs  property_17_pairing_verify.rs  property_23_https_secret_leak.rs  sec_13_error_tracing_diagnostics.rs  web_server_integration.rs
crates/phonemic-discovery/: Cargo.toml
crates/phonemic-discovery/src/: lib.rs  mdns.rs  qr.rs
crates/phonemic-discovery/tests/: discovery_integration.rs
crates/phonemic-injector/: Cargo.toml
crates/phonemic-injector/src/: lib.rs  linux.rs  macos.rs  planner.rs  virtual_backend.rs  windows.rs
crates/phonemic-protocol/: Cargo.toml  build.rs
crates/phonemic-protocol/src/: config.rs  error.rs  error_obj.rs  http.rs  lib.rs  ws.rs
crates/phonemic-protocol/tests/: error_contract.rs  property_11_unicode_roundtrip.rs  ts_mirror_stamp.rs
docs/: README.md  ci.md
docs/superpowers/specs/: 2026-06-06-desktop-gui-window-design.md  2026-06-13-phase2-bidirectional-transfer-design.md
scripts/: README.md  gen-ts-types.mjs  generate-release-notes.sh  sign-macos.sh  sign-windows.ps1  smoke.ps1  smoke.sh
scripts/lib/: protocol-fingerprint.mjs
