# PhoneMic 工作区根清单
#
# 设计来源：.kiro/specs/phone-mic-voice-input/design.md §2.2
# 任务来源：.kiro/specs/phone-mic-voice-input/tasks.md 1.1, 1.2
#
# 本工作区采用 monorepo 布局：
#   - apps/desktop/src-tauri  Tauri 2.x 桌面端入口（任务 1.2 已生成骨架）
#   - apps/mobile/            Vue 3 + Vite 移动端（任务 1.3 初始化）
#   - crates/                 所有可独立测试的 Rust 业务 crate
#       * phonemic-app        桌面端业务装配层（被 src-tauri 引用）
#       * phonemic-core       业务逻辑（端口选择、状态机、Web Server 等）
#       * phonemic-protocol   桌面 / 移动共享类型与协议定义
#       * phonemic-injector   跨平台键盘注入抽象
#       * phonemic-discovery  mDNS / 连接信息广播
#       * phonemic-asr        Server_ASR 引擎与桥接

[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/phonemic-app",
    "crates/phonemic-core",
    "crates/phonemic-protocol",
    "crates/phonemic-injector",
    "crates/phonemic-discovery",
    "crates/phonemic-asr",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.75"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/your-org/phonemic"
homepage      = "https://github.com/your-org/phonemic"
authors       = ["PhoneMic Contributors"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# 暂时放宽以便快速迭代；进入实现阶段后视情况收紧
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

# 共享依赖版本统一在此处声明，子 crate 通过 `dep.workspace = true` 引用
[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml        = "0.8"

# Tauri 2.x —— 桌面端运行时与构建脚本（任务 1.2，design §3.1 / §4.1）
tauri       = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2" }

# 属性测试 —— Rust 侧 PBT 库（design §9.2，任务 2.6 起被各 crate 作为 dev-dependency 使用）
proptest    = "1"

# 加密 / 随机源 —— Pairing_Code 生成与恒定时间比较、日志摘要等（任务 3.9 / 3.11 / 3.20）
rand        = { version = "0.8", default-features = false, features = ["std", "std_rng", "getrandom"] }
subtle      = "2"
sha2        = "0.10"
base64      = "0.22"
hex         = "0.4"

# 发布构建配置
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true
