# Server_ASR 引擎与桥接
# 设计来源：design.md §3.8、§4.6；任务来源：tasks.md 8.x

[package]
name        = "phonemic-asr"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Server-side ASR engine bridge (whisper.cpp adapter, fallback only)"

[lints]
workspace = true

[dependencies]
phonemic-protocol = { path = "../phonemic-protocol" }
phonemic-core     = { path = "../phonemic-core" }

serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
bytes       = { workspace = true }

[features]
default = []
# 启用 whisper-rs 适配器；CI 默认关闭（任务 8.4）。
whisper = []

[dev-dependencies]
proptest = { workspace = true }
