# mDNS 发现与连接信息广播
# 设计来源：design.md §3.6、§3.7、§4.4；任务来源：tasks.md 6.x

[package]
name        = "phonemic-discovery"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "LAN discovery (mDNS) and QR-code rendering for PhoneMic"

[lints]
workspace = true

[dependencies]
phonemic-protocol = { path = "../phonemic-protocol" }
phonemic-core     = { path = "../phonemic-core" }

serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
tokio     = { workspace = true }
anyhow    = { workspace = true }

# 任务 6.1：mDNS / 接口监听
mdns-sd     = { workspace = true }
if-watch    = { workspace = true }

# 任务 6.3：二维码渲染
qrcode      = { workspace = true }
base64      = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
# 任务 6.4 测试桥：rqrr + resvg/tiny-skia 解码 SVG
rqrr      = "0.7"
resvg     = "0.42"
tiny-skia = "0.11"
usvg      = "0.42"
image     = { version = "0.25", default-features = false, features = ["png"] }
