# 跨平台键盘注入抽象
# 设计来源：design.md §3.5、§4.5；任务来源：tasks.md 7.x

[package]
name        = "phonemic-injector"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Cross-platform keyboard injection backend (Windows / macOS / Linux)"

[lints]
workspace = true

[features]
# 仅在能访问 GUI 会话的环境下启用平台后端的真实集成测试
# （tasks.md 7.13）。CI 默认无该 feature，桌面端打包构建会显式开启。
default = []
live-backend-tests = []

[dependencies]
phonemic-protocol = { path = "../phonemic-protocol" }

serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
sha2      = { workspace = true }

# Windows 平台后端：SendInput / GetForegroundWindow / GetWindowThreadProcessId
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

# macOS 平台后端：CGEventCreateKeyboardEvent + AXIsProcessTrustedWithOptions
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics    = "0.23"
core-foundation  = "0.9"
objc2            = "0.5"

# Linux 平台后端：X11 XTest
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2", features = ["xlib", "xtest"] }

[dev-dependencies]
proptest     = { workspace = true }
serial_test  = "3"
